--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,10 @@
 %\setlength{\pdfpageheight}{\paperheight} 
 \raggedbottom
 
-\usepackage{hyperref}
+\usepackage{xcolor}
+\definecolor{linkblue}{HTML}{0000EE}
+\usepackage[colorlinks=true, linkcolor=linkblue, urlcolor=linkblue, citecolor=linkblue]{hyperref}
+
 \usepackage{bm}
 \usepackage[symbol]{footmisc}
 
