--- a/main.tex
+++ b/main.tex
@@ -253,13 +253,16 @@ I image supermassive black holes and assist in observations using the Event Hori
 
 \textbf{$^S$J. R. Farah}, ..., and the Event Horizon Telescope Collaboration. (2022) \textit{Selective Dynamical Imaging of Interferometric Data.} ApJL, 930, L18
 
+\textbf{J. R. Farah}, L. J. Prust, D. A. Howell. Y. Q. Ni, et al. 2024. \textit{Lense-Thirring precessing magnetar engine drives a superluminous supernova.}. Nature, submitted.
 
-\textbf{J. R. Farah}, D. W. Pesce, M. D. Johnson, \& L. Blackburn. 2020. \textit{On the Approximation of the Black Hole Shadow with a Simple Polar Curve}. ApJ, 900, 77.
 
 \textbf{J. R. Farah}, D. A. Howell, G. Tereran. 2024. \textit{Shock-cooling Constraints via Early-time Observations of the Type IIb SN 2022hnt}. ApJ, accepted.
 
 
 \textbf{J. R. Farah}, J. Davelaar, D. Palumbo, M. Johnson, J. Delgado. 2024. \textit{Machine- and deep-learning-driven angular momentum inference from BHEX observations of the $n = 1$ photon ring}. ApJ, accepted.
+
+\textbf{J. R. Farah}, D. W. Pesce, M. D. Johnson, \& L. Blackburn. 2020. \textit{On the Approximation of the Black Hole Shadow with a Simple Polar Curve}. ApJ, 900, 77.
+
 
 \textbf{J. R. Farah}, D. Hiramatsu, D. A. Howell, et al. 2025. \textit{When IIb Ceases To Be: Bridging the Gap Between Type IIb and Short-plateau Supernovae}. ApJ, submitted.
 
