--- a/main.tex
+++ b/main.tex
@@ -256,7 +256,7 @@ I image supermassive black holes and assist in observations using the Event Hori
 \textbf{J. R. Farah}, L. J. Prust, D. A. Howell. Y. Q. Ni, et al. 2024. \textit{Lense-Thirring precessing magnetar engine drives a superluminous supernova.}. Nature, submitted.
 
 
-\textbf{J. R. Farah}, D. A. Howell, G. Tereran. 2024. \textit{Shock-cooling Constraints via Early-time Observations of the Type IIb SN 2022hnt}. ApJ, accepted.
+\textbf{J. R. Farah}, D. A. Howell, G. Terreran. 2024. \textit{Shock-cooling Constraints via Early-time Observations of the Type IIb SN 2022hnt}. ApJ, accepted.
 
 
 \textbf{J. R. Farah}, J. Davelaar, D. Palumbo, M. Johnson, J. Delgado. 2024. \textit{Machine- and deep-learning-driven angular momentum inference from BHEX observations of the $n = 1$ photon ring}. ApJ, accepted.
@@ -266,7 +266,7 @@ I image supermassive black holes and assist in observations using the Event Hori
 
 \textbf{J. R. Farah}, D. Hiramatsu, D. A. Howell, et al. 2025. \textit{When IIb Ceases To Be: Bridging the Gap Between Type IIb and Short-plateau Supernovae}. ApJ, submitted.
 
-% \textbf{J. R. Farah}, L. J. Prust, G. Terreran, D. A. Howell. 2025. \textit{The First 4 Years of SN 1993J Revisited: Geometric Modeling of the Radio Shell with Closure Quantities}. ApJ, in prep.
+\textbf{J. R. Farah}, L. J. Prust, G. Terreran, D. A. Howell. 2025. \textit{The First 4 Years of SN 1993J Revisited: Geometric Modeling of the Radio Shell with Closure Quantities}. ApJ, in prep.
 
 \textbf{J. R. Farah}, A. Lupsasca, C. Gammie. 2025. \textit{Interferometric inference of black hole spin from the photon ring brightness profile}. ApJ, in prep.
 
