--- a/main.tex
+++ b/main.tex
@@ -256,7 +256,7 @@ I image supermassive black holes and assist in observations using the Event Hori
 \textbf{J. R. Farah}, L. J. Prust, D. A. Howell. Y. Q. Ni, et al. 2024. \textit{Lense-Thirring precessing magnetar engine drives a superluminous supernova.}. Nature, submitted.
 
 
-\textbf{J. R. Farah}, D. A. Howell, G. Terreran. 2024. \textit{Shock-cooling Constraints via Early-time Observations of the Type IIb SN 2022hnt}. ApJ, accepted.
+\textbf{J. R. Farah}, D. A. Howell, G. Terreran, et al. 2024. \textit{Shock-cooling Constraints via Early-time Observations of the Type IIb SN 2022hnt}. ApJ, accepted.
 
 
 \textbf{J. R. Farah}, J. Davelaar, D. Palumbo, M. Johnson, J. Delgado. 2024. \textit{Machine- and deep-learning-driven angular momentum inference from BHEX observations of the $n = 1$ photon ring}. ApJ, accepted.
