--- a/main.tex
+++ b/main.tex
@@ -46,6 +46,7 @@
 \let\endchangemargin=\endlist 
 
 \begin{document}
+
 % \vspace{-.35cm}
 \name{Joseph R. Farah \vspace*{.1in}}
 \begin{resume}
@@ -67,8 +68,10 @@ USA & \textit{Citations}: \href{https://scholar.google.com/citations?hl=en&user=
 Astrophysics, supernovae, photon ring, radio astronomy, black holes, magnetars, very long baseline interferometry, space VLBI, strong gravity, Bayesian modeling, magnetohydrodynamics, frameworks, machine learning, deep learning
 %probabilistic graphical models,
 
+
 \vspace*{-1mm}
 \section{\sc Education}
+\label{sec:education}
 
 {\bf University of California Santa Barbara}, Santa Barbara, CA, USA\hfill 2021--2026
 
@@ -253,7 +256,7 @@ I image supermassive black holes and assist in observations using the Event Hori
 
 \textbf{$^S$J. R. Farah}, ..., and the Event Horizon Telescope Collaboration. (2022) \textit{Selective Dynamical Imaging of Interferometric Data.} ApJL, 930, L18
 
-\textbf{J. R. Farah}, L. J. Prust, D. A. Howell. Y. Q. Ni, et al. 2024. \textit{Lense-Thirring precessing magnetar engine drives a superluminous supernova.}. Nature, submitted.
+\textbf{J. R. Farah}, L. J. Prust, D. A. Howell. Y. Q. Ni, et al. 2024. \textit{Lense-Thirring precessing magnetar engine drives a superluminous supernova.} Nature, submitted.
 
 
 \textbf{J. R. Farah}, D. A. Howell, G. Terreran, et al. 2024. \textit{Shock-cooling Constraints via Early-time Observations of the Type IIb SN 2022hnt}. ApJ, accepted.
