--- a/main.tex
+++ b/main.tex
@@ -246,17 +246,15 @@ I image supermassive black holes and assist in observations using the Event Hori
 \textbf{NB:} Full list of publications on page 5
 
 
-\footnote[$\dagger$]{\noindent $^\dagger$These six papers are the first results papers from the Event Horizon Telescope, presenting the first image of a black hole.}
-\textbf{Event Horizon Telescope Collaboration} et al. (2019) ApJL, 875, L2-6
+\footnote[$\dagger$]{\noindent $^\dagger$These six papers are the first results papers from the Event Horizon Telescope, presenting the first image of a black hole.}\textbf{Event Horizon Telescope Collaboration} et al. (2019) ApJL, 875, L2-6
 
 
 
-\footnote[$^S$]{\noindent $^S$These 10  papers are the first Galactic Center results papers from the Event Horizon Telescope, presenting the second image of a black hole and the first horizon-scale images of Sgr A$^\ast$.}
-\textbf{Event Horizon Telescope Collaboration et al}. (2022) ApJL 930 L12-17,L19-21
+\footnote[$^S$]{\noindent $^S$These 10  papers are the first Galactic Center results papers from the Event Horizon Telescope, presenting the second image of a black hole and the first horizon-scale images of Sgr A$^\ast$.}\textbf{Event Horizon Telescope Collaboration et al}. (2022) ApJL 930 L12-17,L19-21
 
 \textbf{$^S$J. R. Farah}, ..., and the Event Horizon Telescope Collaboration. (2022) \textit{Selective Dynamical Imaging of Interferometric Data.} ApJL, 930, L18
 
-\textbf{J. R. Farah}, L. J. Prust, D. A. Howell. Y. Q. Ni, et al. 2024. \textit{Lense-Thirring precessing magnetar engine drives a superluminous supernova.} Nature, submitted.
+\textbf{J. R. Farah}, L. J. Prust, D. A. Howell. Y. Q. Ni, et al. 2025. \textit{Lense-Thirring precessing magnetar engine drives a superluminous supernova.} Nature, submitted.
 
 
 \textbf{J. R. Farah}, D. A. Howell, G. Terreran, et al. 2024. \textit{Shock-cooling Constraints via Early-time Observations of the Type IIb SN 2022hnt}. ApJ, accepted.
