--- a/main.tex
+++ b/main.tex
@@ -182,7 +182,7 @@ $1^\textrm{st}$ Place Award, Massachusetts State Science and Engineering Fair \h
 {\em NSF Graduate Research Fellowship with the LCO -- Goleta, CA}
 
 \begin{changemargin}{-0.0cm}{2.5cm} 
-I apply bleeding-edge VLBI to resolvable supernovae to characterize their ejecta and probe the uncertainties of supernova physics. I use the LCO global network of telescopes to perform optical and spectroscopic follow-up of a wide variety of supernovae and transients. Using rapid follow-up observations combined with new shock cooling physics, I seek to better characterize and understand the mass stripping mechanism of Type IIb supernovae. Additionally, I help with infrastructure maintenance and development for the robotic LCO platform.
+I use the LCO global network of telescopes to perform optical and spectroscopic follow-up of a wide variety of supernovae and transients. Using rapid follow-up observations combined with new shock cooling physics, I seek to better characterize and understand the mass stripping mechanism of Type IIb supernovae, and the underlying mechanisms powering superluminous supernovae. Additionally, I help with infrastructure maintenance and development for the robotic LCO platform.
 
 \textit{Supervisor: Andy Howell}
 \end{changemargin}
