update adding numbers

--- a/main.tex
+++ b/main.tex
@@ -246,30 +246,30 @@ I image supermassive black holes and assist in observations using the Event Hori
 \textbf{NB:} Full list of publications on page 5
 
 
-\footnote[$\dagger$]{\noindent $^\dagger$These six papers are the first results papers from the Event Horizon Telescope, presenting the first image of a black hole.}\textbf{Event Horizon Telescope Collaboration} et al. (2019) ApJL, 875, L2-6
+\footnote[$\dagger$]{\noindent $^\dagger$These six papers are the first results papers from the Event Horizon Telescope, presenting the first image of a black hole.}1--6. \textbf{Event Horizon Telescope Collaboration} et al. (2019) ApJL, 875, L2-6
 
 
 
-\footnote[$^S$]{\noindent $^S$These 10  papers are the first Galactic Center results papers from the Event Horizon Telescope, presenting the second image of a black hole and the first horizon-scale images of Sgr A$^\ast$.}\textbf{Event Horizon Telescope Collaboration et al}. (2022) ApJL 930 L12-17,L19-21
+\footnote[$^S$]{\noindent $^S$These 10  papers are the first Galactic Center results papers from the Event Horizon Telescope, presenting the second image of a black hole and the first horizon-scale images of Sgr A$^\ast$.}7--16. \textbf{Event Horizon Telescope Collaboration et al}. (2022) ApJL 930 L12-17,L19-21
 
-\textbf{$^S$J. R. Farah}, ..., and the Event Horizon Telescope Collaboration. (2022) \textit{Selective Dynamical Imaging of Interferometric Data.} ApJL, 930, L18
+17. \textbf{$^S$J. R. Farah}, ..., and the Event Horizon Telescope Collaboration. (2022) \textit{Selective Dynamical Imaging of Interferometric Data.} ApJL, 930, L18
 
-\textbf{J. R. Farah}, L. J. Prust, D. A. Howell. Y. Q. Ni, et al. 2025. \textit{Lense-Thirring precessing magnetar engine drives a superluminous supernova.} Nature, submitted.
-
-
-\textbf{J. R. Farah}, D. A. Howell, G. Terreran, et al. 2024. \textit{Shock-cooling Constraints via Early-time Observations of the Type IIb SN 2022hnt}. ApJ, accepted.
+18. \textbf{J. R. Farah}, L. J. Prust, D. A. Howell. Y. Q. Ni, et al. 2025. \textit{Lense-Thirring precessing magnetar engine drives a superluminous supernova.} Nature, submitted.
 
 
-\textbf{J. R. Farah}, J. Davelaar, D. Palumbo, M. Johnson, J. Delgado. 2024. \textit{Machine- and deep-learning-driven angular momentum inference from BHEX observations of the $n = 1$ photon ring}. ApJ, accepted.
-
-\textbf{J. R. Farah}, D. W. Pesce, M. D. Johnson, \& L. Blackburn. 2020. \textit{On the Approximation of the Black Hole Shadow with a Simple Polar Curve}. ApJ, 900, 77.
+19. \textbf{J. R. Farah}, D. A. Howell, G. Terreran, et al. 2024. \textit{Shock-cooling Constraints via Early-time Observations of the Type IIb SN 2022hnt}. ApJ, accepted.
 
 
-\textbf{J. R. Farah}, D. Hiramatsu, D. A. Howell, et al. 2025. \textit{When IIb Ceases To Be: Bridging the Gap Between Type IIb and Short-plateau Supernovae}. ApJ, submitted.
+20. \textbf{J. R. Farah}, J. Davelaar, D. Palumbo, M. Johnson, J. Delgado. 2024. \textit{Machine- and deep-learning-driven angular momentum inference from BHEX observations of the $n = 1$ photon ring}. ApJ, accepted.
 
-\textbf{J. R. Farah}, L. J. Prust, G. Terreran, D. A. Howell. 2025. \textit{The First 4 Years of SN 1993J Revisited: Geometric Modeling of the Radio Shell with Closure Quantities}. ApJ, in prep.
+21. \textbf{J. R. Farah}, D. W. Pesce, M. D. Johnson, \& L. Blackburn. 2020. \textit{On the Approximation of the Black Hole Shadow with a Simple Polar Curve}. ApJ, 900, 77.
 
-\textbf{J. R. Farah}, A. Lupsasca, C. Gammie. 2025. \textit{Interferometric inference of black hole spin from the photon ring brightness profile}. ApJ, in prep.
+
+22. \textbf{J. R. Farah}, D. Hiramatsu, D. A. Howell, et al. 2025. \textit{When IIb Ceases To Be: Bridging the Gap Between Type IIb and Short-plateau Supernovae}. ApJ, submitted.
+
+23. \textbf{J. R. Farah}, L. J. Prust, G. Terreran, D. A. Howell. 2025. \textit{The First 4 Years of SN 1993J Revisited: Geometric Modeling of the Radio Shell with Closure Quantities}. ApJ, in prep.
+
+24. \textbf{J. R. Farah}, A. Lupsasca, C. Gammie. 2025. \textit{Interferometric inference of black hole spin from the photon ring brightness profile}. ApJ, in prep.
 
 
 
@@ -399,110 +399,110 @@ Imaging a Black Hole with the Event Horizon Telescope. Harvard University, Cambr
 
 (last updated: Dec 2024)
 
-T. Szalai, R. Konyves-Toth, A. P. Nagy, ...\textbf{J. R. Farah} et al. (2024). \textit{ The story of SN 2021aatd: A peculiar 1987A-like supernova with an early-phase luminosity excess }. A\&A, 690, A17, 094201.
+73. T. Szalai, R. Konyves-Toth, A. P. Nagy, ...\textbf{J. R. Farah} et al. (2024). \textit{ The story of SN 2021aatd: A peculiar 1987A-like supernova with an early-phase luminosity excess }. A\&A, 690, A17, 094201.
 
-Z. Bora, R. Konyves-Toth, J. Vinko, ...\textbf{J. R. Farah} et al. (2024). \textit{ Ejecta Masses in Type Ia Supernovae—Implications for the Progenitor and the Explosion Scenario }. PASP, 136, 9, 094201.
+72. Z. Bora, R. Konyves-Toth, J. Vinko, ...\textbf{J. R. Farah} et al. (2024). \textit{ Ejecta Masses in Type Ia Supernovae—Implications for the Progenitor and the Explosion Scenario }. PASP, 136, 9, 094201.
 
-M. Shrestha, K. A. Bostroem, D. J. Sand, ...\textbf{J. R. Farah} et al. (2024). \textit{ Extended Shock Breakout and Early Circumstellar Interaction in SN 2024ggi }. ApJL, 972, 1, L15.
+71. M. Shrestha, K. A. Bostroem, D. J. Sand, ...\textbf{J. R. Farah} et al. (2024). \textit{ Extended Shock Breakout and Early Circumstellar Interaction in SN 2024ggi }. ApJL, 972, 1, L15.
 
-S. K. Yadavalli, A. V. Villar, L. Izzo, ...\textbf{J. R. Farah} et al. (2024). \textit{ SN 2022oqm: A Bright and Multipeaked Calcium-rich Transient }. ApJ, 972, 2, 194.
+70. S. K. Yadavalli, A. V. Villar, L. Izzo, ...\textbf{J. R. Farah} et al. (2024). \textit{ SN 2022oqm: A Bright and Multipeaked Calcium-rich Transient }. ApJ, 972, 2, 194.
 
-A. W. Raymond, S. S. Doeleman, K. Asada, ...\textbf{J. R. Farah} et al. (2024). \textit{ First Very Long Baseline Interferometry Detections at 870 μm }. AJ, 168, 3, 130.
+69. A. W. Raymond, S. S. Doeleman, K. Asada, ...\textbf{J. R. Farah} et al. (2024). \textit{ First Very Long Baseline Interferometry Detections at 870 μm }. AJ, 168, 3, 130.
 
-W. Jacobson-Galan, L. Dessart, K. W. Davis, ...\textbf{J. R. Farah} et al. (2024). \textit{  Final Moments. II. Observational Properties and Physical Modeling of Circumstellar-material-interacting Type II Supernovae }. ApJ, 970, 2, 189.
+68. W. Jacobson-Galan, L. Dessart, K. W. Davis, ...\textbf{J. R. Farah} et al. (2024). \textit{  Final Moments. II. Observational Properties and Physical Modeling of Circumstellar-material-interacting Type II Supernovae }. ApJ, 970, 2, 189.
 
-S. Faris, I. Arcavi, L. Makrygianni, ...\textbf{J. R. Farah} et al. (2024). \textit{  Light-curve Structure and Hα Line Formation in the Tidal Disruption Event AT 2019azh }. ApJ, 969, 2, 104.
+68. S. Faris, I. Arcavi, L. Makrygianni, ...\textbf{J. R. Farah} et al. (2024). \textit{  Light-curve Structure and Hα Line Formation in the Tidal Disruption Event AT 2019azh }. ApJ, 969, 2, 104.
 
-L. A. Kwok, M. R. Siebert, J. Johansson, ...\textbf{J. R. Farah} et al. (2024). \textit{ Ground-based and JWST Observations of SN 2022pul. II. Evidence from Nebular Spectroscopy for a Violent Merger in a Peculiar Type Ia Supernova }. ApJ, 966, 1, 135.
+67. L. A. Kwok, M. R. Siebert, J. Johansson, ...\textbf{J. R. Farah} et al. (2024). \textit{ Ground-based and JWST Observations of SN 2022pul. II. Evidence from Nebular Spectroscopy for a Violent Merger in a Peculiar Type Ia Supernova }. ApJ, 966, 1, 135.
 
-J. E. Andrews, J. Pearson, G. Hosseinzadeh, ...\textbf{J. R. Farah} et al. (2024). \textit{ SN 2022jox: An Extraordinarily Ordinary Type II SN with Flash Spectroscopy }. ApJ, 965, 1, 85.
+66. J. E. Andrews, J. Pearson, G. Hosseinzadeh, ...\textbf{J. R. Farah} et al. (2024). \textit{ SN 2022jox: An Extraordinarily Ordinary Type II SN with Flash Spectroscopy }. ApJ, 965, 1, 85.
 
 
-\textbf{$^S$Event Horizon Telescope Collaboration} et al. (2024). \textit{ First Sagittarius A* Event Horizon Telescope Results. VII. Polarization of the Ring } ApJL, 964, 2, L25.
+65. \textbf{$^S$Event Horizon Telescope Collaboration} et al. (2024). \textit{ First Sagittarius A* Event Horizon Telescope Results. VII. Polarization of the Ring } ApJL, 964, 2, L25.
 
-\textbf{$^S$Event Horizon Telescope Collaboration} et al. (2024). \textit{ First Sagittarius A* Event Horizon Telescope Results. VIII. Physical Interpretation of the Polarized Ring } ApJL, 964, 2, L26.
+64. \textbf{$^S$Event Horizon Telescope Collaboration} et al. (2024). \textit{ First Sagittarius A* Event Horizon Telescope Results. VIII. Physical Interpretation of the Polarized Ring } ApJL, 964, 2, L26.
 
-E. P. Gonzalez, D. A. Howell, G. Terreran ...\textbf{J. R. Farah} et al. (2024). \textit{ SN 2022joj: A Potential Double Detonation with a Thin Helium Shell  }. ApJ, 961, 2, 196.
+63. E. P. Gonzalez, D. A. Howell, G. Terreran ...\textbf{J. R. Farah} et al. (2024). \textit{ SN 2022joj: A Potential Double Detonation with a Thin Helium Shell  }. ApJ, 961, 2, 196.
 
-D. Hiramatsu, T. Matsumoto, E. Berger ...\textbf{J. R. Farah} et al. (2024). \textit{ Multiple Peaks and a Long Precursor in the Type IIn Supernova 2021qqp: An Energetic Explosion in a Complex Circumstellar Environment   }. ApJ, 961, 2, 181.
+62. D. Hiramatsu, T. Matsumoto, E. Berger ...\textbf{J. R. Farah} et al. (2024). \textit{ Multiple Peaks and a Long Precursor in the Type IIn Supernova 2021qqp: An Energetic Explosion in a Complex Circumstellar Environment   }. ApJ, 961, 2, 181.
 
-M. Shrestha, J. Pearson, S. Wyatt ...\textbf{J. R. Farah} et al. (2024). \textit{ Evidence of Weak Circumstellar Medium Interaction in the Type II SN 2023axu  }. ApJ, 961, 2, 247.
+61. M. Shrestha, J. Pearson, S. Wyatt ...\textbf{J. R. Farah} et al. (2024). \textit{ Evidence of Weak Circumstellar Medium Interaction in the Type II SN 2023axu  }. ApJ, 961, 2, 247.
 
-M. Newsome, I. Arcavi, D. A. Howell, ...\textbf{J. R. Farah} et al. (2023). \textit{ Probing the Subparsec Dust of a Supermassive Black Hole with the Tidal Disruption Event AT 2020mot }. ApJ, 961, 2, 239.
+60. M. Newsome, I. Arcavi, D. A. Howell, ...\textbf{J. R. Farah} et al. (2023). \textit{ Probing the Subparsec Dust of a Supermassive Black Hole with the Tidal Disruption Event AT 2020mot }. ApJ, 961, 2, 239.
 
-G. Paraschos, J. Kim, M. Wielgus ...\textbf{J. R. Farah} et al. (2023). \textit{ Ordered magnetic fields around the 3C 84 central black hole}. A\&A, 682, L3.
+59. G. Paraschos, J. Kim, M. Wielgus ...\textbf{J. R. Farah} et al. (2023). \textit{ Ordered magnetic fields around the 3C 84 central black hole}. A\&A, 682, L3.
 
-M. Siebert, L. Kwok, J. Johansson ...\textbf{J. R. Farah} et al. (2024). \textit{Ground-based and JWST Observations of SN 2022pul. I. Unusual Signatures of Carbon, Oxygen, and Circumstellar Interaction in a Peculiar Type Ia Supernova }. ApJ, 960, 1, 88.
+58. M. Siebert, L. Kwok, J. Johansson ...\textbf{J. R. Farah} et al. (2024). \textit{Ground-based and JWST Observations of SN 2022pul. I. Unusual Signatures of Carbon, Oxygen, and Circumstellar Interaction in a Peculiar Type Ia Supernova }. ApJ, 960, 1, 88.
 
-J. Pearson, D. Sand, P. Lundqvist, ...\textbf{J. R. Farah} et al. (2024). \textit{Strong Carbon Features and a Red Early Color in the Underluminous Type Ia SN 2022xkq}. ApJ, 960, 1, 29.
+57. J. Pearson, D. Sand, P. Lundqvist, ...\textbf{J. R. Farah} et al. (2024). \textit{Strong Carbon Features and a Red Early Color in the Underluminous Type Ia SN 2022xkq}. ApJ, 960, 1, 29.
 
-\textbf{$^S$Event Horizon Telescope Collaboration} et al. (2024). \textit{The persistent shadow of the supermassive black hole of M 87. I. Observations, calibration, imaging, and analysis } A\&A, 681, A79.
+56. \textbf{$^S$Event Horizon Telescope Collaboration} et al. (2024). \textit{The persistent shadow of the supermassive black hole of M 87. I. Observations, calibration, imaging, and analysis } A\&A, 681, A79.
 
-S. Faris, I. Arcavi, L. Makrygianni, ...\textbf{J. R. Farah} et al. (2023). \textit{Light-Curve Structure and Halpha Line Formation in the Tidal Disruption Event AT 2019azh}. arXiv:2312.03842.
+55. S. Faris, I. Arcavi, L. Makrygianni, ...\textbf{J. R. Farah} et al. (2023). \textit{Light-Curve Structure and Halpha Line Formation in the Tidal Disruption Event AT 2019azh}. arXiv:2312.03842.
 
-P. Torne, K. Liu, R. Eatough, ...\textbf{J. R. Farah} et al. (2023). \textit{ A Search for Pulsars around Sgr A$^\ast$ in the First Event Horizon Telescope Data Set } ApJ, 959, 1.
+54. P. Torne, K. Liu, R. Eatough, ...\textbf{J. R. Farah} et al. (2023). \textit{ A Search for Pulsars around Sgr A$^\ast$ in the First Event Horizon Telescope Data Set } ApJ, 959, 1.
 
-F. Roelofs, M. Johhnson, A. Chael, ...\textbf{J. R. Farah} et al. (2023). \textit{ Polarimetric Geometric Modeling for mm-VLBI Observations of Black Holes. } ApJL, 957, 2, L21.
+53. F. Roelofs, M. Johhnson, A. Chael, ...\textbf{J. R. Farah} et al. (2023). \textit{ Polarimetric Geometric Modeling for mm-VLBI Observations of Black Holes. } ApJL, 957, 2, L21.
 
-\textbf{$^S$Event Horizon Telescope Collaboration} et al. (2023). \textit{First M87 Event Horizon Telescope Results. IX. Detection of Near-horizon Circular Polarization} ApJL, 957, 2, L20.
+52. \textbf{$^S$Event Horizon Telescope Collaboration} et al. (2023). \textit{First M87 Event Horizon Telescope Results. IX. Detection of Near-horizon Circular Polarization} ApJL, 957, 2, L20.
 
-J. Andrews, J. Pearson, G. Hosseinzadeh, ...\textbf{J. R. Farah} et al. 2023. \textit{ SN 2022jox: An extraordinarily ordinary Type II SN with Flash Spectroscopy. }. arXiv:2310.16092.
+51. J. Andrews, J. Pearson, G. Hosseinzadeh, ...\textbf{J. R. Farah} et al. 2023. \textit{ SN 2022jox: An extraordinarily ordinary Type II SN with Flash Spectroscopy. }. arXiv:2310.16092.
 
-M. Shrestha, J. Pearson, S. Wyatt, ...\textbf{J. R. Farah} et al. 2023. \textit{Evidence of weak circumstellar medium interaction in the Type II SN 2023axu}. arXiv:2310.00162.
+50. M. Shrestha, J. Pearson, S. Wyatt, ...\textbf{J. R. Farah} et al. 2023. \textit{Evidence of weak circumstellar medium interaction in the Type II SN 2023axu}. arXiv:2310.00162.
 
-Y. Dong, S. Valenti, C. Ashall, ...\textbf{J. R. Farah} et al. 2023. \textit{ SN 2022crv: IIb, Or Not IIb: That is the Question }. arXiv:2309.09433.
+49. Y. Dong, S. Valenti, C. Ashall, ...\textbf{J. R. Farah} et al. 2023. \textit{ SN 2022crv: IIb, Or Not IIb: That is the Question }. arXiv:2309.09433.
 
-D. Hiramatsu, D. Tsuna, E. Berger, ...\textbf{J. R. Farah} et al. 2023. \textit{From Discovery to the First Month of the Type II Supernova 2023ixf: High and Variable Mass Loss in the Final Year Before Explosion}. arXiv:2307.03165.
+48. D. Hiramatsu, D. Tsuna, E. Berger, ...\textbf{J. R. Farah} et al. 2023. \textit{From Discovery to the First Month of the Type II Supernova 2023ixf: High and Variable Mass Loss in the Final Year Before Explosion}. arXiv:2307.03165.
 
-A. Bostroem, J. Pearson, M. Shrestha, ...\textbf{J. R. Farah} et al. 2023. \textit{Early Spectroscopy and Dense Circumstellar Medium Interaction in SN~2023ixf}. ApJL, 956, 1.
+47. A. Bostroem, J. Pearson, M. Shrestha, ...\textbf{J. R. Farah} et al. 2023. \textit{Early Spectroscopy and Dense Circumstellar Medium Interaction in SN~2023ixf}. ApJL, 956, 1.
 
-G. Hosseinzadeh, \textbf{J. R. Farah} et al. 2023. \textit{Shock Cooling and Possible Precursor Emission in the Early Light Curve of the Type II SN 2023ixf}. ApJL. 953, 1, L16.  
+46. G. Hosseinzadeh, \textbf{J. R. Farah} et al. 2023. \textit{Shock Cooling and Possible Precursor Emission in the Early Light Curve of the Type II SN 2023ixf}. ApJL. 953, 1, L16.  
 
-B. S. Prather, J. Dexter, M. Moscibrodzka,  ... \textbf{J. R. Farah} et al. 2023. \textit{Comparison of Polarized Radiative Transfer Codes Used by the EHT Collaboration}. ApJ, 950, 1.
+45. B. S. Prather, J. Dexter, M. Moscibrodzka,  ... \textbf{J. R. Farah} et al. 2023. \textit{Comparison of Polarized Radiative Transfer Codes Used by the EHT Collaboration}. ApJ, 950, 1.
 
-D. Hiramatsu, T. Matsumoto, E. Berger, ... \textbf{J. R. Farah} et al. 2023. \textit{Multiple Peaks and a Long Precursor in the Type IIn Supernova 2021qqp: An Energetic Explosion in a Complex Circumsteller Environment}. arXiv:2305.11168. 
+44. D. Hiramatsu, T. Matsumoto, E. Berger, ... \textbf{J. R. Farah} et al. 2023. \textit{Multiple Peaks and a Long Precursor in the Type IIn Supernova 2021qqp: An Energetic Explosion in a Complex Circumsteller Environment}. arXiv:2305.11168. 
 
-M. Newsome, I. Arcavi, D. A. Howell, ... \textbf{J. R. Farah} et al. 2023. 2023.  \textit{Probing the Sub-Parsec Dust of a Supermassive Black Hole with the Tidal Disruption Event AT 2020mot}. arXiv:2305.03767.
+43. M. Newsome, I. Arcavi, D. A. Howell, ... \textbf{J. R. Farah} et al. 2023. 2023.  \textit{Probing the Sub-Parsec Dust of a Supermassive Black Hole with the Tidal Disruption Event AT 2020mot}. arXiv:2305.03767.
 
-G. Hosseinzadeh, D. Sand, S. Sarbadhicary, ... \textbf{J. R. Farah} et al. 2023. \textit{The Early Light Curve of SN 2023bee: Constraining Type Ia Supernova Progenitors the Apian Way}. 2023. arXiv:2305.03071. 
+42. G. Hosseinzadeh, D. Sand, S. Sarbadhicary, ... \textbf{J. R. Farah} et al. 2023. \textit{The Early Light Curve of SN 2023bee: Constraining Type Ia Supernova Progenitors the Apian Way}. 2023. arXiv:2305.03071. 
 
-A. Bostroem, L. Dessart,  D. John Hillier, ... \textbf{J. R. Farah} et al. 2023. \textit{SN 2022acko: the First Early Far-Ultraviolet Spectra of a Type IIP Supernova}. 2023. arXiv:2305.01654.
+41. A. Bostroem, L. Dessart,  D. John Hillier, ... \textbf{J. R. Farah} et al. 2023. \textit{SN 2022acko: the First Early Far-Ultraviolet Spectra of a Type IIP Supernova}. 2023. arXiv:2305.01654.
 
-T. Ben-Ami, I. Arcavi, M. Newsome, \textbf{J. R. Farah} et al. \textit{The Type Ibn Supernova 2019kbj -- Indications for Diversity in Type Ibn Supernova Progenitors}. ApJ, 946, 1.
+40. T. Ben-Ami, I. Arcavi, M. Newsome, \textbf{J. R. Farah} et al. \textit{The Type Ibn Supernova 2019kbj -- Indications for Diversity in Type Ibn Supernova Progenitors}. ApJ, 946, 1.
 
-S. Jorstand, M. Wielgus, R. Lico, ..., and the \textbf{Event Horizon Telescope Collaboration}. 2023. \textit{The Event Horizon Telescope Image of the Quasar NRAO 530}. ApJ, 943, 2.
+39. S. Jorstand, M. Wielgus, R. Lico, ..., and the \textbf{Event Horizon Telescope Collaboration}. 2023. \textit{The Event Horizon Telescope Image of the Quasar NRAO 530}. ApJ, 943, 2.
  
-M. Wielgus, M. Moscibrodzka, J. Vos, ... \textbf{J. R. Farah} et al. 2022. \textit{Orbital motion near Sagittarius A$^\ast$ . Constraints from polarimetric ALMA observations}. A\&A, 665, 6.
+38. M. Wielgus, M. Moscibrodzka, J. Vos, ... \textbf{J. R. Farah} et al. 2022. \textit{Orbital motion near Sagittarius A$^\ast$ . Constraints from polarimetric ALMA observations}. A\&A, 665, 6.
 
-A. E. Broderick, D. W. Pesce, R. Gold, ... \textbf{J. R. Farah} et al. 2022. \textit{The Photon Ring in M87$^\ast$}. ApJL, 935, 1.
+37. A. E. Broderick, D. W. Pesce, R. Gold, ... \textbf{J. R. Farah} et al. 2022. \textit{The Photon Ring in M87$^\ast$}. ApJL, 935, 1.
 
-S. Issaoun, M. Wielgus, S. Jorstad, ..., and the \textbf{Event Horizon Telescope Collaboration}. 2022. \textit{Resolving the Inner Parsec of the Blazar J1924-2914 with the Event Horizon Telescope}. ApJL, 934, 2.
+36. S. Issaoun, M. Wielgus, S. Jorstad, ..., and the \textbf{Event Horizon Telescope Collaboration}. 2022. \textit{Resolving the Inner Parsec of the Blazar J1924-2914 with the Event Horizon Telescope}. ApJL, 934, 2.
 
-K. Satapathy, F. Ozel, D. Psaltis, ..., and the \textbf{Event Horizon Telescope Collaboration}. 2021. \textit{The Variability of the Black-Hole Image in M87 at the Dynamical Time Scale}. ApJL, 925, 13.
-
-
-M. Janssen, H. Falcke, ..., and the \textbf{Event Horizon Telescope Collaboration}. 2021. \textit{Event Horizon Telescope observations of the jet launching and collimation in Centaurus A}. Nature Astronomy.
-
-P. Kocherlakota, L. Rezzolla, ..., and the \textbf{Event Horizon Telescope Collaboration}. 2021. \textit{Constraints on black-hole charges with the 2017 EHT observations of M87$^\ast$}. Phys. Rev. D, 103, 10.
-
-R. Narayan, D. Palumbo, ... \textbf{J. R. Farah}, et al. 2021.\textit{The Polarized Image of a Synchrotron Emitting Ring of Gas Orbiting a Black Hole} ApJ, 912, 35.
-
-\textbf{Event Horizon Telescope Collaboration} et al. 2021.\textit{ Broadband Multi-wavelength Properties of M87 during the 2017 Event Horizon Telescope Campaign.} ApJL, 911, L11.
-
-C. Goddi and the \textbf{Event Horizon Telescope Collaboration}. 2021.\textit{ Polarimetric Properties of Event Horizon Telescope Targets from ALMA.} ApJL, 910, L14.
-
-A. R. Raymond, D. Palumbo, ... \textbf{J. R. Farah}, et al. 2021. \textit{Evaluation of New Submillimeter VLBI Sites for the Event Horizon Telescope}. arXiv:2102.05482
-
-\textbf{Event Horizon Telescope Collaboration} et al. 2021.\textit{ First M87 Event Horizon Telescope Results. VIII. Magnetic Field Structure near The Event Horizon} ApJL, 910, L13.
-
-\textbf{Event Horizon Telescope Collaboration} et al. 2021.\textit{ First M87 Event Horizon Telescope Results. VII. Polarization of the Ring.} ApJL, 910, L12.
+35. K. Satapathy, F. Ozel, D. Psaltis, ..., and the \textbf{Event Horizon Telescope Collaboration}. 2021. \textit{The Variability of the Black-Hole Image in M87 at the Dynamical Time Scale}. ApJL, 925, 13.
 
 
+34. M. Janssen, H. Falcke, ..., and the \textbf{Event Horizon Telescope Collaboration}. 2021. \textit{Event Horizon Telescope observations of the jet launching and collimation in Centaurus A}. Nature Astronomy.
+
+33. P. Kocherlakota, L. Rezzolla, ..., and the \textbf{Event Horizon Telescope Collaboration}. 2021. \textit{Constraints on black-hole charges with the 2017 EHT observations of M87$^\ast$}. Phys. Rev. D, 103, 10.
+
+32. R. Narayan, D. Palumbo, ... \textbf{J. R. Farah}, et al. 2021.\textit{The Polarized Image of a Synchrotron Emitting Ring of Gas Orbiting a Black Hole} ApJ, 912, 35.
+
+31. \textbf{Event Horizon Telescope Collaboration} et al. 2021.\textit{ Broadband Multi-wavelength Properties of M87 during the 2017 Event Horizon Telescope Campaign.} ApJL, 911, L11.
+
+30. C. Goddi and the \textbf{Event Horizon Telescope Collaboration}. 2021.\textit{ Polarimetric Properties of Event Horizon Telescope Targets from ALMA.} ApJL, 910, L14.
+
+29. A. R. Raymond, D. Palumbo, ... \textbf{J. R. Farah}, et al. 2021. \textit{Evaluation of New Submillimeter VLBI Sites for the Event Horizon Telescope}. arXiv:2102.05482
+
+28. \textbf{Event Horizon Telescope Collaboration} et al. 2021.\textit{ First M87 Event Horizon Telescope Results. VIII. Magnetic Field Structure near The Event Horizon} ApJL, 910, L13.
+
+27. \textbf{Event Horizon Telescope Collaboration} et al. 2021.\textit{ First M87 Event Horizon Telescope Results. VII. Polarization of the Ring.} ApJL, 910, L12.
 
 
-Jae-Young Kim and the \textbf{Event Horizon Telescope Collaboration}. 2020.\textit{ Event Horizon Telescope imaging of the archetypal blazar 3C 279 at an extreme 20 microarcsecond resolution.} Astronomy and Astrophysics. DOI:10.1051/0004-6361/202037493.
 
-Johnson, M. D., Lupsasca, A., Strominger, A., ... \textbf{J. R. Farah}, et al. 2019. \textit{Universal Interferometric Signatures of a Black Hole’s Photon Ring}. Science Advances, arXiv:1907.04329.
+
+26. Jae-Young Kim and the \textbf{Event Horizon Telescope Collaboration}. 2020.\textit{ Event Horizon Telescope imaging of the archetypal blazar 3C 279 at an extreme 20 microarcsecond resolution.} Astronomy and Astrophysics. DOI:10.1051/0004-6361/202037493.
+
+25. Johnson, M. D., Lupsasca, A., Strominger, A., ... \textbf{J. R. Farah}, et al. 2019. \textit{Universal Interferometric Signatures of a Black Hole’s Photon Ring}. Science Advances, arXiv:1907.04329.
 
 
 
